--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
 <head>
 	<title></title>
 	<link href="http://fonts.googleapis.com/css?family=Changa+One" rel="stylesheet" type="text/css">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+      			<a class="navbar-brand" href="index.html">Cody Norman</a>
+			</div>
+			<div class="collapse navbar-collapse navbar-header">	
+				<ul class="nav navbar-nav ">
+					<li><a href="#">Contact</a></li>
+					<li><a href="http://codynorman.wordpress.com">Blog</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<section class="section-one">
 		<div id="home" class="bg_parralax" data-type="background" data-speed="10"></div>
 		<h2>Testing Google Fonts</h2>
