added rough about section

--- a/index.html
+++ b/index.html
@@ -35,8 +35,16 @@
 		<h2>Testing Google Fonts</h2>
 	</section>
 	<section class="content-block">
-		<h3>First Content Block</h3>
-		<p>Next level McSweeney's dreamcatcher VHS, polaroid seitan post-ironic hella put a bird on it Cosby sweater Wes Anderson shabby chic tote bag. Cray Godard kitsch, 90's try-hard Odd Future synth skateboard mustache Shoreditch blog semiotics. Stumptown scenester kale chips disrupt master cleanse, photo booth mlkshk. Neutra chillwave flannel XOXO, umami mumblecore locavore typewriter pug bitters pork belly letterpress butcher Vice. Master cleanse retro Marfa, irony Carles artisan beard Helvetica butcher kale chips readymade mixtape. Direct trade literally DIY Vice keffiyeh, post-ironic flannel Bushwick Williamsburg forage stumptown cred fingerstache. Tousled gentrify Williamsburg craft beer hoodie Pitchfork, direct trade ugh put a bird on it Helvetica drinking vinegar tattooed ennui Echo Park typewriter.</p>
+		<div class="row">
+			<div class="col-lg-4">
+				<img id="profile-pic"class="img-responsive img-circle" src="images/profile_pic.jpg">
+			</div>
+			<div class="col-lg-6">
+				<h1>Cody Norman</h1>
+				<p>Current bootcamp student at the <a href="http://www.codingdojo.com" target="_blank">Coding Dojo</a> Full Stack development bootcamp.  See below for technoligies, languages, and skills learned at the bootcamp.  Check out my blog for the latest updates!
+				</p>
+			<div>
+	</div>
 	</section>
 	<section class="section-two">
 		<div id="about" class="bg_parralax" data-type="background" data-speed="10"></div>
