Added stacks info

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</nav>
 	<section class="section-one">
 		<div id="home" class="bg_parralax" data-type="background" data-speed="10"></div>
-		<h2>Testing Google Fonts</h2>
+		<h2>Web Developer</h2>
 	</section>
 	<section class="content-block">
 		<div class="row">
@@ -51,8 +51,33 @@
 		<h2>More Fancy Text in a different spot</h2>
 	</section>
 	<section class="content-block">
-		<h3>Second Content Block</h3>
-		<p>Next level McSweeney's dreamcatcher VHS, polaroid seitan post-ironic hella put a bird on it Cosby sweater Wes Anderson shabby chic tote bag. Cray Godard kitsch, 90's try-hard Odd Future synth skateboard mustache Shoreditch blog semiotics. Stumptown scenester kale chips disrupt master cleanse, photo booth mlkshk. Neutra chillwave flannel XOXO, umami mumblecore locavore typewriter pug bitters pork belly letterpress butcher Vice. Master cleanse retro Marfa, irony Carles artisan beard Helvetica butcher kale chips readymade mixtape. Direct trade literally DIY Vice keffiyeh, post-ironic flannel Bushwick Williamsburg forage stumptown cred fingerstache. Tousled gentrify Williamsburg craft beer hoodie Pitchfork, direct trade ugh put a bird on it Helvetica drinking vinegar tattooed ennui Echo Park typewriter.</p>
+		<div class = "container-fluid">
+		<div class="row">
+			<div class="col-md-4">
+				<h3 class="stacks">LAMP Stack</h3>
+				<img src="images/lamp.png" alt="Lamp Stack Logo" class="img-rounded center-block" id="lamp-logo">
+				<h4>Technologies and Languages</h4>
+				<p>PHP and MySQL, OOP with PHP, MVC with CodeIgniter, Cloud Server Management, Ajax in PHP.</p>
+				<h4>Skills</h4>
+				<p>Advanced Algorithms, Object Oriented Programming, MVC Framework, API Integration, Web Security, Deployment, Load Testing, and Scaling of Web Apps.</p>
+			</div>
+			<div class="col-md-4">
+				<h3 class="stacks">MEAN Stack</h3>
+				<img src="images/mean.png" alt="Mean Stack Logo" class="img-rounded center-block" id="mean-logo">
+				<h4>Technologies and Languages</h4>
+				<p>Advanced Javascript, MongoDB, Express, AngularJS, Node.js, Socket.IO, Redis</p>
+				<h4>Skills</h4>
+				<p>Advanced JS Framework, OOP and MVC Frameworks in JS, JavaScript Prototypes, Creating custom JS libraries, Building Real-time apps</p>
+			</div>
+			<div class="col-md-4">
+				<h3 class="stacks">Rails Stack</h3>
+				<img src="images/ruby.png" alt="RailsStack Logo" class="img-rounded center-block" id="rails-logo">
+				<h4>Technologies and Languages</h4>
+				<p>Ruby on Rails, HAML, SASS, CoffeeScript, Ajax in Rails, Rails + Node.js, Test Driven Development, Heroku</p>
+				<h4>Skills</h4>
+				<p>MVC Frameworks, Object relational Mapper, Deployment of Rails apps.</p>
+			</div>
+		</div>
 	</section>
 	<section class="section-one">
 			<div id="blog" class="bg_parralax" data-type="background" data-speed="10"></div>
