placeholder for contact info

--- a/index.html
+++ b/index.html
@@ -84,20 +84,23 @@
 			<h2>People like fancy Parralax sites</h2>
 	</section>
 	<section class="content-block">
-		<h3>Third Content Block</h3>
-		<p><h4>Technologies and Languages</h4>
-				<p>PHP and MySQL, OOP with PHP, MVC with CodeIgniter, Cloud Server Management, Ajax in PHP.</p>
-				<h4>Skills</h4>
-				<p>Advanced Algorithms, Object Oriented Programming, MVC Framework, API Integration, Web Security, Deployment, Load Testing, and Scaling of Web Apps.</p>
-</p>
+		<div class="row">
+			<div class="col-lg-12" id="contact-info">
+				<h3>Email: wcodynorman@gmail.com</h3>
+				<h3>Blog: codynorman.wordpress.com</h3>
+				<h3>GitHub: cnorm35</h3>
+				<h3>Twitter: @cnorm35</h3>
+				<h3>LinkedIn</h3>
+			</div>
+		</div>
 	</section>
 	<section class="section-two">
 		<div id="contact" class="bg_parralax" data-type="background" data-speed="10"></div>
 		<h2>Google Font: Montserrat</h2>
 	</section>
 	<section class="content-block">
-		<h3>Last Content Block</h3>
-		<p>Next level McSweeney's dreamcatcher VHS, polaroid seitan post-ironic hella put a bird on it Cosby sweater Wes Anderson shabby chic tote bag. Cray Godard kitsch, 90's try-hard Odd Future synth skateboard mustache Shoreditch blog semiotics. Stumptown scenester kale chips disrupt master cleanse, photo booth mlkshk. Neutra chillwave flannel XOXO, umami mumblecore locavore typewriter pug bitters pork belly letterpress butcher Vice. Master cleanse retro Marfa, irony Carles artisan beard Helvetica butcher kale chips readymade mixtape. Direct trade literally DIY Vice keffiyeh, post-ironic flannel Bushwick Williamsburg forage stumptown cred fingerstache. Tousled gentrify Williamsburg craft beer hoodie Pitchfork, direct trade ugh put a bird on it Helvetica drinking vinegar tattooed ennui Echo Park typewriter.</p>
+
+		
 	</section>
 </body>
 </html>
