removed last image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-header">	
 				<ul class="nav navbar-nav ">
-					<li><a href="#">Contact</a></li>
+					<li><a href="#contact-info">Contact</a></li>
 					<li><a href="http://codynorman.wordpress.com">Blog</a></li>
 				</ul>
 			</div>
@@ -48,7 +48,7 @@
 	</section>
 	<section class="section-two">
 		<div id="about" class="bg_parralax" data-type="background" data-speed="10"></div>
-		<h2>More Fancy Text in a different spot</h2>
+		<h2>Technologies and Skills</h2>
 	</section>
 	<section class="content-block">
 		<div class = "container-fluid">
@@ -81,7 +81,7 @@
 	</section>
 	<section class="section-one">
 			<div id="blog" class="bg_parralax" data-type="background" data-speed="10"></div>
-			<h2>People like fancy Parralax sites</h2>
+			<h2>How to reach me</h2>
 	</section>
 	<section class="content-block">
 		<div class="row">
@@ -91,16 +91,15 @@
 				<h3>GitHub: cnorm35</h3>
 				<h3>Twitter: @cnorm35</h3>
 				<h3>LinkedIn</h3>
+
+	<p><span class="glyphicon glyphicon-copyright-mark"></span> Cody Norman 2014</p>
+
 			</div>
 		</div>
 	</section>
-	<section class="section-two">
+<!-- 	<section class="section-two">
 		<div id="contact" class="bg_parralax" data-type="background" data-speed="10"></div>
 		<h2>Google Font: Montserrat</h2>
-	</section>
-	<section class="content-block">
-
-		
-	</section>
+	</section> -->
 </body>
 </html>
