added scrolling animations

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 	<title></title>
 	<link href="http://fonts.googleapis.com/css?family=Changa+One" rel="stylesheet" type="text/css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-<!-- Optional theme -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
-<!-- Latest compiled and minified JavaScript -->
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<script type="text/javascript" src="js/viewportchecker.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
+	<script src="js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -25,24 +25,24 @@
 			<div class="collapse navbar-collapse navbar-header">	
 				<ul class="nav navbar-nav ">
 					<li><a href="#contact-info">Contact</a></li>
-					<li><a href="http://codynorman.wordpress.com">Blog</a></li>
+					<li><a href="http://codynorman.wordpress.com" target="_blank">Blog</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<section class="section-one">
 		<div id="home" class="bg_parralax" data-type="background" data-speed="10"></div>
+		<h2 id="intro-heading">Full Stack</h2>
 		<h2>Web Developer</h2>
 	</section>
 	<section class="content-block">
 		<div class="row">
-			<div class="col-lg-4">
+			<div class="col-lg-4 wow bounceInUp">
 				<img id="profile-pic"class="img-responsive img-circle" src="images/profile_pic.jpg">
 			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-6 wow bounceInUp">
 				<h1>Cody Norman</h1>
-				<p>Current bootcamp student at the <a href="http://www.codingdojo.com" target="_blank">Coding Dojo</a> Full Stack development bootcamp.  See below for technoligies, languages, and skills learned at the bootcamp.  Check out my blog for the latest updates!
-				</p>
+				<p>I'm currently attending the Coding Dojo web development bootcamp. The program focus on full stack development with the LAMP, MEAN, and Rails stacks. I have a passion for creating reliable, and efficient web applications.</p>
 			<div>
 	</div>
 	</section>
