added contact icons and heading animations

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 	</nav>
 	<section class="section-one">
 		<div id="home" class="bg_parralax" data-type="background" data-speed="10"></div>
-		<h2 id="intro-heading">Full Stack</h2>
-		<h2>Web Developer</h2>
+		<h2 id="intro-heading" class="wow fadeInLeft">Full Stack</h2>
+		<h2 class="wow fadeInLeft">Web Developer</h2>
 	</section>
 	<section class="content-block">
 		<div class="row">
-			<div class="col-lg-4 wow bounceInUp">
+			<div class="col-lg-4 wow bounceInLeft" data-wow-delay=".5s">
 				<img id="profile-pic"class="img-responsive img-circle" src="images/profile_pic.jpg">
 			</div>
-			<div class="col-lg-6 wow bounceInUp">
+			<div class="col-lg-6 wow bounceInUp" data-wow-delay="1s" id="about-section">
 				<h1>Cody Norman</h1>
 				<p>I'm currently attending the Coding Dojo web development bootcamp. The program focus on full stack development with the LAMP, MEAN, and Rails stacks. I have a passion for creating reliable, and efficient web applications.</p>
 			<div>
@@ -48,12 +48,12 @@
 	</section>
 	<section class="section-two">
 		<div id="about" class="bg_parralax" data-type="background" data-speed="10"></div>
-		<h2>Technologies and Skills</h2>
+		<h2 class="wow fadeInDownBig">Technologies and Skills</h2>
 	</section>
 	<section class="content-block">
 		<div class = "container-fluid">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-4 wow bounceInUp" data-wow-delay=".5s">
 				<h3 class="stacks">LAMP Stack</h3>
 				<img src="images/lamp.png" alt="Lamp Stack Logo" class="img-rounded center-block" id="lamp-logo">
 				<h4>Technologies and Languages</h4>
@@ -61,7 +61,7 @@
 				<h4>Skills</h4>
 				<p>Advanced Algorithms, Object Oriented Programming, MVC Framework, API Integration, Web Security, Deployment, Load Testing, and Scaling of Web Apps.</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 wow bounceInUp" data-wow-delay=".7s">
 				<h3 class="stacks">MEAN Stack</h3>
 				<img src="images/mean.png" alt="Mean Stack Logo" class="img-rounded center-block" id="mean-logo">
 				<h4>Technologies and Languages</h4>
@@ -69,7 +69,7 @@
 				<h4>Skills</h4>
 				<p>Advanced JS Framework, OOP and MVC Frameworks in JS, JavaScript Prototypes, Creating custom JS libraries, Building Real-time apps</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 wow bounceInUp" data-wow-delay=".9s">
 				<h3 class="stacks">Rails Stack</h3>
 				<img src="images/ruby.png" alt="RailsStack Logo" class="img-rounded center-block" id="rails-logo">
 				<h4>Technologies and Languages</h4>
@@ -81,22 +81,20 @@
 	</section>
 	<section class="section-one">
 			<div id="blog" class="bg_parralax" data-type="background" data-speed="10"></div>
-			<h2>How to reach me</h2>
+			<h2 class="wow fadeInLeft">How to reach me</h2>
 	</section>
 	<section class="content-block">
 		<div class="row">
 			<div class="col-lg-12" id="contact-info">
-				<h3>Email: wcodynorman@gmail.com</h3>
-				<h3>Blog: codynorman.wordpress.com</h3>
-				<h3>GitHub: cnorm35</h3>
-				<h3>Twitter: @cnorm35</h3>
-				<h3>LinkedIn</h3>
-
-	<p><span class="glyphicon glyphicon-copyright-mark"></span> Cody Norman 2014</p>
-
+				<a href="mailto:wcodynorman@gmail.com"><img src="images/mail_icon.png"></a>
+				<a href="http://codynorman.wordpress.com" target="_blank"><img src="images/wordpress.png"></a>
+				<a href="http://github.com/cnorm35" target="_blank"><img src="images/Github.png"></a>
+				<a href="http://twitter.com/cnorm35" target="_blank"><img src="images/Twitter.png"></a>
+				<a href="https://www.linkedin.com/pub/cody-norman/27/320/268"><img src="images/LinkedIn.png"></a>
 			</div>
 		</div>
 	</section>
+
 <!-- 	<section class="section-two">
 		<div id="contact" class="bg_parralax" data-type="background" data-speed="10"></div>
 		<h2>Google Font: Montserrat</h2>
