--- a/index.html
+++ b/index.html
@@ -85,12 +85,35 @@
 	</section>
 	<section class="content-block">
 		<div class="row">
-			<div class="col-lg-12" id="contact-info">
-				<a href="mailto:wcodynorman@gmail.com"><img src="images/mail_icon.png"></a>
-				<a href="http://codynorman.wordpress.com" target="_blank"><img src="images/wordpress.png"></a>
-				<a href="http://github.com/cnorm35" target="_blank"><img src="images/Github.png"></a>
-				<a href="http://twitter.com/cnorm35" target="_blank"><img src="images/Twitter.png"></a>
-				<a href="https://www.linkedin.com/pub/cody-norman/27/320/268"><img src="images/LinkedIn.png"></a>
+			<div class="col-lg-12">
+				<div class="contact-container">
+					<div class="col-md-2 col-md-offest-1">
+						<a class="center" href="mailto:wcodynorman@gmail.com"><img class="center" src="images/mail_icon.png"></a>
+						<p><a  href="mailto:wcodynorman@gmail.com">wcodynorman@gmail.com</a></p>
+					</div>
+					<div class="col-md-2">
+						<a id="wp-logo" href="http://codynorman.wordpress.com" target="_blank"><img src="images/wordpress.png"></a>
+						<p><a href="http://codynorman.wordpress.com">codynorman.wordpress.com</a></p>
+					</div>
+					<div class="col-md-2" id="gh-section">
+						<a id="gh-logo" href="http://github.com/cnorm35" target="_blank"><img src="images/Github.png"></a>
+						<p id="gh-link">GitHub: <a href="http://github.com/cnorm35">cnorm35</a></p>
+					</div>
+					<div class="col-md-2 ">
+						<a id="twitter-logo" href="http://twitter.com/cnorm35" target="_blank"><img src="images/Twitter.png"></a>
+						<p id="twit-follow-btn">
+						<a href="https://twitter.com/cnorm35" class="twitter-follow-button" data-show-count="false">Follow @cnorm35</a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
+					</div>
+					<div class="col-md-2 ">
+						<a href="https://www.linkedin.com/pub/cody-norman/27/320/268"><img src="images/LinkedIn.png"></a>
+						<p>
+							<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
+							<script type="IN/MemberProfile" data-id="http://www.linkedin.com/pub/cody-norman/27/320/268" data-format="hover" data-text="Cody Norman">
+							</script>
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -99,5 +122,6 @@
 		<div id="contact" class="bg_parralax" data-type="background" data-speed="10"></div>
 		<h2>Google Font: Montserrat</h2>
 	</section> -->
+
 </body>
 </html>
