--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<section class="content-block">
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="contact-container">
+				<div class="contact-container wow bounceInDown">
 					<div class="col-md-2 col-md-offest-1">
 						<a class="center" href="mailto:wcodynorman@gmail.com"><img class="center" src="images/mail_icon.png"></a>
 						<p><a  href="mailto:wcodynorman@gmail.com">wcodynorman@gmail.com</a></p>
@@ -106,7 +106,7 @@
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
 					</div>
 					<div class="col-md-2 ">
-						<a href="https://www.linkedin.com/pub/cody-norman/27/320/268"><img src="images/LinkedIn.png"></a>
+						<a href="https://www.linkedin.com/pub/cody-norman/27/320/268"><img id="li-logo" src="images/LinkedIn.png"></a>
 						<p>
 							<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
 							<script type="IN/MemberProfile" data-id="http://www.linkedin.com/pub/cody-norman/27/320/268" data-format="hover" data-text="Cody Norman">
