added in skill section, updated layout and information

--- a/index.html
+++ b/index.html
@@ -53,29 +53,39 @@
 	<section class="content-block">
 		<div class = "container-fluid">
 		<div class="row">
-			<div class="col-md-4 wow bounceInUp" data-wow-delay=".5s">
+			<div class="col-lg-3">
+				<h3 class="stacks">Front End</h3>
+				<img src="images/html5.png" alt="HTML5 CSS3 Stack Logo" class=" center-block stack-img" id="web-logo">
+				<h4 class="stacks">Technologies and Languages</h4>
+				<p>HTML5 and CSS3, Twitter Bootstrap, LESS, jQuery, jQuery UI, HTTP Request/Response, Version Control, GitHub</p>
+				<h4 class="skill-heading">Skills</h4>
+				<p class="skills-list">Wireframes and Mockups, Responsive Web Design, Basic Domain Hosting, ERD/Database Design</p>
+			</div>
+			<div class="col-lg-3">
 				<h3 class="stacks">LAMP Stack</h3>
-				<img src="images/lamp.png" alt="Lamp Stack Logo" class="img-rounded center-block" id="lamp-logo">
-				<h4>Technologies and Languages</h4>
+				<img src="images/lamp.png" alt="Lamp Stack Logo" class="img-rounded center-block stack-img" id="lamp-logo">
+				<h4 class="stacks">Technologies and Languages</h4>
 				<p>PHP and MySQL, OOP with PHP, MVC with CodeIgniter, Cloud Server Management, Ajax in PHP.</p>
-				<h4>Skills</h4>
-				<p>Advanced Algorithms, Object Oriented Programming, MVC Framework, API Integration, Web Security, Deployment, Load Testing, and Scaling of Web Apps.</p>
+				<h4 class="skill-heading">Skills</h4>
+				<p class="skills-list">Advanced Algorithms, Object Oriented Programming, MVC Framework, API Integration, Web Security, Deployment.</p>
+					
 			</div>
-			<div class="col-md-4 wow bounceInUp" data-wow-delay=".7s">
+			<div class="col-lg-3">
 				<h3 class="stacks">MEAN Stack</h3>
-				<img src="images/mean.png" alt="Mean Stack Logo" class="img-rounded center-block" id="mean-logo">
-				<h4>Technologies and Languages</h4>
-				<p>Advanced Javascript, MongoDB, Express, AngularJS, Node.js, Socket.IO, Redis</p>
-				<h4>Skills</h4>
-				<p>Advanced JS Framework, OOP and MVC Frameworks in JS, JavaScript Prototypes, Creating custom JS libraries, Building Real-time apps</p>
+				<img src="images/mean.png" alt="Lamp Stack Logo" class="img-rounded center-block stack-img" id="mean-logo">
+				<h4 class="stacks">Technologies and Languages</h4>
+				<p>Advanced Javascript, MongoDB, Express, AngularJS, Node.js, Socket.IO, D3.js, Custom Libraries, Firebase</p>
+				<h4 class="skill-heading">Skills</h4>
+				<p class="skills-list">Advanced JS Frameworks, OOP and MVC Frameworks, JavaScript Prototypes, Creating custom JS libraries, Building Real-time applications, Data-driven visualizations with D3</p>
 			</div>
-			<div class="col-md-4 wow bounceInUp" data-wow-delay=".9s">
-				<h3 class="stacks">Rails Stack</h3>
-				<img src="images/ruby.png" alt="RailsStack Logo" class="img-rounded center-block" id="rails-logo">
-				<h4>Technologies and Languages</h4>
+			<div class="col-lg-3">
+				<h3 class="stacks">RAILS</h3>
+				<img src="images/ruby.png" alt="Lamp Stack Logo" class="img-rounded center-block stack-img" id="rails-logo">
+				<h4 class="stacks">Technologies and Languages</h4>
 				<p>Ruby on Rails, HAML, SASS, CoffeeScript, Ajax in Rails, Rails + Node.js, Test Driven Development, Heroku</p>
-				<h4>Skills</h4>
-				<p>MVC Frameworks, Object relational Mapper, Deployment of Rails apps.</p>
+				<h4 class="skill-heading">Skills</h4>
+				<p class="skills-list">MVC Frameworks, Object relational Mapper, Deployment of Rails apps.</p>
+					
 			</div>
 		</div>
 	</section>
