fixed p tag overflow issue

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 		</section>
 		<section class="content-block">
 			<div class = "container-fluid">
-			<div class="row wow bounceInLeft" data-wow-delay=".5s">
-				<div class="col-lg-3">
+			<div class="row">
+				<div class="col-lg-3 wow bounceInLeft" data-wow-delay=".75s">
 					<h3 class="stacks">Front End</h3>
 					<img src="images/html5.png" alt="HTML5 CSS3 Stack Logo" class=" center-block stack-img" id="web-logo">
 					<h4 class="stacks">Technologies and Languages</h4>
-					<p>HTML5 and CSS3, Twitter Bootstrap, LESS, jQuery, jQuery UI, HTTP Request/Response, Version Control, GitHub</p>
+					<p>HTML5 and CSS3, Twitter Bootstrap, LESS, jQuery, jQuery UI, Version Control, GitHub, Foundation</p>
 					<h4 class="skill-heading">Skills</h4>
 					<p class="skills-list">Wireframes and Mockups, Responsive Web Design, Basic Domain Hosting, ERD/Database Design</p>
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-3 wow bounceInLeft" data-wow-delay=".6s">
 					<h3 class="stacks">LAMP Stack</h3>
 					<img src="images/lamp.png" alt="Lamp Stack Logo" class="img-rounded center-block stack-img" id="lamp-logo">
 					<h4 class="stacks">Technologies and Languages</h4>
@@ -74,7 +74,7 @@
 					<p class="skills-list">Advanced Algorithms, Object Oriented Programming, MVC Framework, API Integration, Web Security, Deployment.</p>
 						
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-3 wow bounceInLeft" data-wow-delay=".4s">
 					<h3 class="stacks">MEAN Stack</h3>
 					<img src="images/mean.png" alt="Lamp Stack Logo" class="img-rounded center-block stack-img" id="mean-logo">
 					<h4 class="stacks">Technologies and Languages</h4>
@@ -82,7 +82,7 @@
 					<h4 class="skill-heading">Skills</h4>
 					<p class="skills-list">Advanced JS Frameworks, OOP and MVC Frameworks, JavaScript Prototypes, Creating custom JS libraries, Building Real-time applications, Data-driven visualizations with D3</p>
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-3 wow bounceInLeft" data-wow-delay=".2s">
 					<h3 class="stacks">RAILS</h3>
 					<img src="images/ruby.png" alt="Lamp Stack Logo" class="img-rounded center-block stack-img" id="rails-logo">
 					<h4 class="stacks">Technologies and Languages</h4>
@@ -105,10 +105,10 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12">
-					<div class="contact-container wow bounceInDown" data-wow-delay=".25s">
-						<div class="col-md-2 col-md-offest-1">
+					<div class="contact-container col-centered wow bounceInUp">
+						<div class="col-md-2 col-md-offest-1" id="mail">
 							<a class="center" href="mailto:wcodynorman@gmail.com"><img class="center" src="images/mail_icon.png"></a>
-							<p><a  href="mailto:wcodynorman@gmail.com">wcodynorman@gmail.com</a></p>
+							<p class="text-left"><a  href="mailto:wcodynorman@gmail.com">wcodynorman@gmail.com</a></p>
 						</div>
 						<div class="col-md-2">
 							<a id="wp-logo" href="http://codynorman.wordpress.com" target="_blank"><img src="images/Wordpress.png"></a>
@@ -118,19 +118,19 @@
 							<a id="gh-logo" href="http://github.com/cnorm35" target="_blank"><img src="images/Github.png"></a>
 							<p id="gh-link">GitHub: <a href="http://github.com/cnorm35">cnorm35</a></p>
 						</div>
-						<div class="col-md-2 ">
-							<a id="twitter-logo" href="http://twitter.com/cnorm35" target="_blank"><img src="images/Twitter.png"></a>
-							<p id="twit-follow-btn">
-							<a href="https://twitter.com/cnorm35" class="twitter-follow-button" data-show-count="false">Follow @cnorm35</a>
-						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
-						</div>
-						<div class="col-md-2 ">
+						<div class="col-md-2">
 							<a href="https://www.linkedin.com/pub/cody-norman/27/320/268"><img id="li-logo" src="images/LinkedIn.png"></a>
-							<p>
-								<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
-								<script type="IN/MemberProfile" data-id="http://www.linkedin.com/pub/cody-norman/27/320/268" data-format="hover" data-text="Cody Norman">
-								</script>
-							</p>
+								<p>
+									<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
+									<script type="IN/MemberProfile" data-id="http://www.linkedin.com/pub/cody-norman/27/320/268" data-format="hover" data-text="Cody Norman">
+									</script>
+								</p>
+						</div>
+						<div class="col-md-2">
+								<a id="twitter-logo" href="http://twitter.com/cnorm35" target="_blank"><img src="images/Twitter.png"></a>
+								<p id="twit-follow-btn">
+								<a href="https://twitter.com/cnorm35" class="twitter-follow-button" data-show-count="false">Follow @cnorm35</a>
+							<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
 						</div>
 					</div>
 				</div>
